# TrancritorPythonObsidianWhisper

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  config.py  docker-compose.yml  file_manager.py  main.py  menu.py  pyproject.toml  requirements.txt  requirementsOld.txt  system_audio.py  transcription.py  utils.py  youtube_downloader.py
ansible/: .gitignore  ansible.cfg
ansible/group_vars/: all.yml  vault.yml.example
ansible/inventory/: production.yml
ansible/playbooks/: deploy.yml  setup-nginx.yml
ansible/templates/: env.j2  nginx-transcritor.conf.j2
docs/plans/: production_architecture.md
frontend/: app.js  index.html  style.css
src/transcritor/: config.py  logging_config.py
src/transcritor/api/: app.py  dependencies.py  schemas.py
src/transcritor/api/routers/: health.py  transcriptions.py
src/transcritor/core/: exceptions.py  models.py
src/transcritor/engine/: registry.py  whisper_engine.py
src/transcritor/services/: transcription_service.py
src/transcritor/sources/: base.py  file_source.py  system_audio.py  url_source.py  video_source.py  youtube_source.py
src/transcritor/storage/: file_store.py  job_store.py
src/transcritor/workers/: celery_app.py  tasks.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_api_callback.py  test_api_health.py  test_api_phase7.py  test_api_transcriptions.py  test_worker_integration.py
tests/unit/: test_callback.py  test_cleanup.py  test_file_source.py  test_file_store.py  test_job_store.py  test_models.py  test_tasks.py  test_tasks_callback.py  test_transcription_service.py  test_url_source.py  test_video_source.py  test_whisper_engine.py  test_youtube_source.py
transcriptions/: 71ff8301-e2df-4b92-ab76-d35706320c35.md  AUDIO-2025-01-10-13-17-28.md  sample.md
