[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcritor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12",
    "pydantic-settings>=2.13",
]

[project.optional-dependencies]
transcription = [
    "faster-whisper>=1.0.0",
    "moviepy>=2.2.1",
    "sounddevice>=0.5.1",
    "wavio>=0.0.9",
]
api = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.44",
    "celery[redis]>=5.6.3",
    "redis>=5.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.28.1",
    "fakeredis>=2.35.0",
    "celery[redis]>=5.6.3",
    "redis>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: tests that load the real Whisper model",
    "e2e: end-to-end tests requiring Docker environment",
]

[tool.coverage.run]
source = ["src/transcritor"]
